--- a/react-app/package.json
+++ b/react-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "snowfall-proj",
   "version": "0.1.0",
-  "homepage": "https://github.com/FrankVanris2/SnowPrediction/tree/main/react-app",
+  "homepage": "https://FrankVanris2.github.io/SnowPrediction/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
